WIP renderer rendering correct projected vertices. Fragment rendering currently not implemented but remplaced with a wireframe viewer.

--- a/ThreeNet.Test/ThreeNet.Test.csproj
+++ b/ThreeNet.Test/ThreeNet.Test.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\ThreeNet\ThreeNet.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ship.obj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
