refactored some sdl-related functions to make them more .net style and abstract away the rendering

--- a/ThreeNet/ThreeNet.csproj
+++ b/ThreeNet/ThreeNet.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ThreeNet.LowLevel\ThreeNet.LowLevel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="libpng16-16.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
